chore: upload folder config to readFiles  mobile app